<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:orientation="vertical"
    android:background="#37FFE1E1"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0599FA"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/automatic_pronunciation_error_detector"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="23dp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="50dp">

    <EditText
        android:id="@+id/tvText"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/tap_to_type"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center_horizontal"
        />

    <ImageButton

        android:id="@+id/btnSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:maxWidth="62dp"
        android:maxHeight="62dp"
        android:scaleType="fitCenter"
        android:src="@drawable/mic" />

    <ImageButton
        android:id="@+id/btnListenGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:maxWidth="65dp"
        android:maxHeight="65dp"
        android:scaleType="fitCenter"
        android:src="@drawable/speak"

        />

</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        android:layout_marginLeft="20dp"
        android:textSize="28dp" />

    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:progress="50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:layout_marginLeft="20dp"
        android:textSize="28dp" />

    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:progress="50" />

    <Button
        android:id="@+id/lngbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="25dp"
        android:backgroundTint="#5EBEFD"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
    <ImageButton
        android:id="@+id/btnListenYou"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:maxWidth="65dp"
        android:maxHeight="65dp"
        android:scaleType="fitCenter"
        android:src="@drawable/speak"
        android:layout_marginLeft="100dp"
        />


    </LinearLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:background="#2196F3"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/main_menu"
        />

</RelativeLayout>



</LinearLayout>